# backtracking_llm

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  flake.nix  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: minimal-supported-dependencies.yml  pre-commit.yml  python-publish.yml  python.yml  test-examples.yml
backtracking_llm/: __main__.py
backtracking_llm/benchmark/: __main__.py  config.py  evaluate.py  model.py  runner.py  utils.py
backtracking_llm/models/: decision.py  inference.py  question_answering.py
examples/: basic_benchmarking.py  basic_generation.py  interactive_chat.py
examples/basic_benchmark/: main.py
scripts/: profiler.py
src/backtracking_llm/: agents.py  chat.py  decision.py  features.py  generation.py  inference.py
src/backtracking_llm/_scripts/: benchmark.py  cli.py  train_rl.py
src/backtracking_llm/benchmark/: config.py  evaluator.py  hp.py  rl_env.py  runner.py
src/backtracking_llm/rl/: config.py  data.py  env.py  features.py  judges.py  operators.py  rewards.py  trainers.py
src/backtracking_llm/scripts/: cli.py
src/models/: inference.py
tests/: test_agents.py  test_chat.py  test_config.py  test_decision.py  test_features.py  test_generation.py  test_model.py  test_pytest.py
tests/benchmark/: test_evaluator.py  test_model.py  test_rl_env.py  test_runner.py
tests/rl/: test_config.py  test_data.py  test_env.py  test_features.py  test_judges.py  test_operators.py  test_rewards.py  test_trainers.py  test_wrapper.py
