[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "backtracking_llm"
version = "0.1.0"
description = "Library for running inference on large language models with the ability to remove generated tokens."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "matee8", email = "graves-bluff-pesky@duck.com" }
]

keywords = ["text-generation", "neural-network", "machine-learning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "torch >= 2.5, <3.0",
]

[project.urls]
Homepage = "https://github.com/matee8/bactracking_llm"
Repository = "https://github.com/matee8/backtracking_llm"
Issues = "https://github.com/matee8/backtracking_llm/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
